--- a/src/Resources/views/storefront/component/account/login.html.twig
+++ b/src/Resources/views/storefront/component/account/login.html.twig
@@ -1,8 +1,15 @@
 {% sw_extends '@Storefront/storefront/component/account/login.html.twig' %}
-    {% block component_account_login_submit %}
-        {{ parent() }}
-        <div class="pt-2">
-            <a class="btn btn-outline-dark" type="button" href={{ path('frontend.login') }}>
-                <img src="https://cdn.cidaas.de/images/logo-single.png" style="width: 30px; height: 35px;"> Login With Cidaas</a>
-        </div>
-    {% endblock %}
+ {% block component_account_login %} 
+ {{ parent() }}
+ <div class="pt-2 pb-2">
+ <h6> or </h6>
+ </div> 
+ <div class="pt-2">
+ <a class="btn btn-outline-dark" type="button" href={{ path('frontend.login') }}>
+ <img src="https://cdn.cidaas.de/images/logo-single.png" style="width: 30px; height: 35px;"> Login With Cidaas</a>
+ </div>
+ <div class="pt-2 pb-5">
+ <a class="btn btn-outline-dark" type="button" href={{ path('frontend.register') }}>
+ <img src="https://cdn.cidaas.de/images/logo-single.png" style="width: 30px; height: 35px;"> Register With Cidaas</a>
+ </div>
+ {% endblock %}
