--- a/src/Resources/views/storefront/layout/header/account-menu.html.twig
+++ b/src/Resources/views/storefront/layout/header/account-menu.html.twig
@@ -13,14 +13,14 @@
         {% block layout_header_actions_account_widget_dropdown_login %}
             {% if not context.customer %}
                 <div class="account-menu-login">
-                    <a href="{{ path('frontend.login') }}"
+                    <a href="{{ path('cidaas.login') }}"
                        title="{{ "account.loginSubmit"|trans|striptags }}"
                        class="btn btn-primary account-menu-login-button">
                         {{ "account.loginSubmit"|trans|sw_sanitize }}
                     </a>
 
                     <div class="account-menu-register">
-                        {{ "account.orRegister"|trans|sw_sanitize }} <a href="{{ path('frontend.register') }}"
+                        {{ "account.orRegister"|trans|sw_sanitize }} <a href="{{ path('cidaas.register') }}"
                                                             title="{{ "account.orRegisterLink"|trans|striptags }}">{{ "account.orRegisterLink"|trans|striptags }}</a>
                     </div>
                 </div>
