--- a/src/Resources/views/storefront/page/account/sidebar.html.twig
+++ b/src/Resources/views/storefront/page/account/sidebar.html.twig
@@ -4,7 +4,7 @@
                     {% if not context.customer.guest %}
                         <div class="card-footer account-aside-footer">
                             {% block page_account_sidebar_logout %} 
-                                <a href="{{ path('frontend.logout') }}" {# Need to add custom logout route in the path section #}
+                                <a href="{{ path('cidaas.logout') }}" {# Need to add custom logout route in the path section #}
                                    class="btn btn-link account-aside-btn">
                                     {% sw_icon 'log-out' %}
                                     {{ "account.logout"|trans|sw_sanitize }}
